Revert "Management user"

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -39,24 +39,6 @@
   margin-right: 20px
 }
 
-.color_black,.table thead > tr > th {
+.color_black {
   color: black;
-  font-size: 15px;
-}
-
-.header_content {
-  background: #f9f9f9;
-  color: #777246;
-  height:60px;
-  text-align:center;
-  font-size:25px;
-  padding:10px
-}
-
-.container {
-  width: 100%
-}
-
-#page-content{
-  min-height: 540px
 }
